Updated skills section

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                     <h3>HTML5</h3>
                     <ul>
                         <li>Clean and maintainable code</li>
-                        <li>Following the W3C Standards</li>
+                        <li>W3C and MDN Standards</li>
                         <li>B.E.M Methodology</li>
                     </ul>
                 </div>
@@ -595,25 +595,25 @@
                     <ul>
                         <li>Responsive Web Design</li>
                         <li>Flexbox & CSS Grid</li>
-                        <li>SASS / LESS</li>
+                        <li>SASS & Post CSS</li>
                     </ul>
                 </div>
                 <div>
                     <i class="fab fa-js-square"></i>
                     <h3>JAVASCRIPT</h3>
                     <ul>
+                        <li>Typescript</li>
                         <li>DOM Manipulation</li>
-                        <li>Fetch API & JSON</li>
-                        <li>Async / Await, Promises, Destructuring </li>
+                        <li>Fetch, Async / Await, Promises, Destructuring </li>
                     </ul>
                 </div>
                 <div>
-                    <i class="fab fa-vuejs"></i>
-                    <h3>VUE JS</h3>
+                    <i class="fa-light fa-n"></i>
+                    <h3>NEXT JS</h3>
                     <ul>
-                        <li>Vue Router</li>
-                        <li>VueX</li>
-                        <li>Vuetify</li>
+                        <li>Dynamic Components</li>
+                        <li>Layouts</li>
+                        <li>Next Auth</li>
                     </ul>
                 </div>
                 <div>
@@ -621,17 +621,17 @@
                     <h3>REACT JS</h3>
                     <ul>
                         <li>Redux</li>
-                        <li>React Router</li>
-                        <li>Custom Hooks</li>
+                        <li>Routing, Custom hooks, Context</li>
+                        <li>React Testing Library</li>
                     </ul>
                 </div>
                 <div>
-                    <i class="fab fa-node-js"></i>
-                    <h3>NODE JS</h3>
+                    <i class="fa-brands fa-docker"></i>
+                    <h3>DOCKER</h3>
                     <ul>
-                        <li>Express</li>
-                        <li>API REST & JWT</li>
-                        <li>NPM</li>
+                        <li>Docker Compose</li>
+                        <li>Containers, Images, Volumes</li>
+                        <li>Docker Hub</li>
                     </ul>
                 </div>
                 <div>
@@ -640,14 +640,14 @@
                     <ul>
                         <li>Atlas Database</li>
                         <li>CRUD</li>
-                        <li>Schemas Structure</li>
+                        <li>Schemas, Clusters</li>
                     </ul>
                 </div>
                 <div>
                     <i class="fab fa-git-alt"></i>
                     <h3>GIT</h3>
                     <ul>
-                        <li>Github</li>
+                        <li>Github / Gitlab</li>
                         <li>Push / Pulls / Merges</li>
                         <li>Rollbacks</li>
                     </ul>
@@ -774,7 +774,7 @@
                 </div>
                 <div>
                     <h3>Have a look at my CV?</h3>
-                    <a href="files/Arnau CV English (11).pdf" target="_blank" download=""><i
+                    <a href="files/Arnau CV English_k.pdf" target="_blank" download=""><i
                             class="far fa-file-pdf"></i></a>
                 </div>
                 <div>
@@ -787,16 +787,6 @@
             </div>
         </div>
     </section>
-
-
-    <!-- Footer wave -->
-    <!-- <ol>
-            <li>Still left to do</li>
-            <li>Cancel horizontal scroll with JS</li>
-            <li>Project Images & Links</li>
-            <li>Top Sticky Navbar Maybe</li>
-            <li>Organitzar el html de svgs </li>
-        </ol> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
         integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
