Info update changes

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 
     <div class="content">
         <!-- <h1 class="main-content">Front End Web Developer & UI / UX Designer</h1> -->
-        <h1 class="main-content">Full Stack / MERN Stack Web Developer</h1>
+        <h1 class="main-content">Front End / MERN Stack Web Developer</h1>
         <div class="quote-container main-content">
             <div class="avatar"></div>
             <p>Arnau MQ</p>
@@ -611,18 +611,18 @@
                     <i class="fa-light fa-n"></i>
                     <h3>NEXT JS</h3>
                     <ul>
-                        <li>Dynamic Components</li>
-                        <li>Layouts</li>
-                        <li>Next Auth</li>
+                        <li>SSR, SSG, CSR, ISR</li>
+                        <li>Next API, Middlewares</li>
+                        <li>Layouts, Next Auth, Dynamic routes</li>
                     </ul>
                 </div>
                 <div>
                     <i class="fab fa-react"></i>
                     <h3>REACT JS</h3>
                     <ul>
-                        <li>Redux</li>
-                        <li>Routing, Custom hooks, Context</li>
-                        <li>React Testing Library</li>
+                        <li>Redux, Context API</li>
+                        <li>Routing, Custom hooks</li>
+                        <li>Jest, React Testing Library</li>
                     </ul>
                 </div>
                 <div>
@@ -647,7 +647,7 @@
                     <i class="fab fa-git-alt"></i>
                     <h3>GIT</h3>
                     <ul>
-                        <li>Github / Gitlab</li>
+                        <li>Github / Gitlab / Bitbucket</li>
                         <li>Push / Pulls / Merges</li>
                         <li>Rollbacks</li>
                     </ul>
@@ -774,7 +774,7 @@
                 </div>
                 <div>
                     <h3>Have a look at my CV?</h3>
-                    <a href="files/Arnau CV English_k.pdf" target="_blank" download=""><i
+                    <a href="files/Arnau CV English_p.pdf" target="_blank" download=""><i
                             class="far fa-file-pdf"></i></a>
                 </div>
                 <div>
